# protobuf

./: pyproject.toml
avro_files/: helper.py  search_avro_schema.py  search_response2.json  search_response2_dict.py
proto/: search_response.json  search_response.proto
protobuff/: app.py  search_response.py
protobuff/scripts/: generate_proto.py
