[tool.poetry]
name = "protobuff"
version = "0.1.0"
description = ""
authors = ["Bhupesh"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^24.6.0"
protobuf = "^5.28.3"
py-json-to-proto = "^0.1.3"
avro = "^1.12.0"
rec-avro = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Optional: Add scripts for easier running
[tool.poetry.scripts]
start = "protobuff.app:main"
generate-proto = "protobuff.scripts.generate_proto:main"